# llm-cancer-registry-extraction

./: .gitignore  README.md  pyproject.toml
all_prompts/: all_prompts.docx
docs/: agent_graph.html  re_evaluation_results.xlsx
evaluation/: README.md
evaluation/error_analysis/: Error_Analysis (1).rar  README.md
evaluation/statistical_analysis/: README.md  statistical_analysis.ipynb
experiments/Laterality/: later_deepseek_p1.py  later_deepseek_p2.py  later_deepseek_p3.py  later_deepseek_p4.py  later_deepseek_p5.py  later_lama3_p1.py  later_lama3_p2.py  later_lama3_p3.py  later_lama3_p4.py  later_lama3_p5.py  later_qwen_p1.py  later_qwen_p2.py  later_qwen_p3.py  later_qwen_p4.py  later_qwen_p5.py
experiments/TNM/: tnm_deepseek_p1.py  tnm_deepseek_p2.py  tnm_deepseek_p3.py  tnm_deepseek_p4.py  tnm_deepseek_p5.py  tnm_lama3_p1.py  tnm_lama3_p2.py  tnm_lama3_p3.py  tnm_lama3_p4.py  tnm_lama3_p5.py  tnm_qwen_p1.py  tnm_qwen_p2.py  tnm_qwen_p3.py  tnm_qwen_p4.py  tnm_qwen_p5.py
experiments/grade/: grade_deepseek.py  grade_deepseek_p2.py  grade_deepseek_p3.py  grade_deepseek_p4.py  grade_deepseek_p5.py  grade_lama3_p2.py  grade_lama3_p3.py  grade_lama3_p4.py  grade_lama3_p5.py  grade_onlama3.3.py  grade_qwen.py  grade_qwen_p2.py  grade_qwen_p3.py  grade_qwen_p4.py  grade_qwen_p5.py
similarity_score/: cos_similarity.py
treatment/: treat_deepseek_p1.py  treat_deepseek_p2.py  treat_deepseek_p3.py  treat_deepseek_p4.py  treat_deepseek_p5.py  treat_lama3_p1.py  treat_qwen_p1.py  treat_qwen_p2.py  treat_qwen_p3.py  treat_qwen_p4.py  treat_qwen_p5.py
(+20 files in other folders)
