[tool.poetry]
name = "llm-based-info-extraction"
version = "0.1.0"
description = ""
authors = ["Riham"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10.12"
pandas = "^2.2.3"
transformers = "^4.49.0"
torch = "^2.6.0"
ollama = "^0.4.7"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"
streamlit = "^1.42.2"
seaborn = "^0.13.2"
langchain = "^0.3.26"
langchain-core = "^0.3.70"
langgraph = "^0.5.4"
langchain-community = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


